frontend { save expanded/collapsed states of topics & books accordion panels thanks to : http://stackoverflow.com/questions/12733238/bootstrap-collapse-accordion-return-to-same-section-when-navigating-away-and-ba } backend: { little fixes
}

--- a/www/template.bootstrap24/theme.css
+++ b/www/template.bootstrap24/theme.css
@@ -84,6 +84,10 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
     overflow: hidden;
 }
 
+.etks-panel-topics {
+    overflow: hidden;
+}
+
 .etks-panel-topics a.list-group-item:hover {
     background-color: #e8f0f7;
     color: #00008b;
